2005-08-30  Sam Steingold  <sds@gnu.org>

	* utils/modprep.lisp (print-tables-1, print-tables-2):
	name all types (even those used just once) to avoid the GCC 4 warning
	"non-local variable '<anonymous struct> ...' uses anonymous type"
	(modprep): use "~&" to avoid an extra blank line

2005-08-30  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (HAVE_SIGNALS): pass on to clisp.h for clx/new-clx
	* modules/clx/new-clx/clx.f (writing_to_subprocess):
	define as "extern" without checking for SIGPIPE

2005-08-30  Sam Steingold  <sds@gnu.org>

	* clisp-link.in (fail, check_dir, make_dest, check_linkset)
	(check_module): new functions; use them throughout the file
	(verbose): call exit (using fail) if the command fails
	avoid sub-shells to exit on the first failure

2005-08-30  Sam Steingold  <sds@gnu.org>

	* configure: when --with-dynamic-ffi is supplied, but the FFI
	fails to build, issue an error message and fail

2005-08-30  Sam Steingold  <sds@gnu.org>

	* makemake.in (LDFLAGS): fixed handling (were effectively ignored)

2005-08-30  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (PACK, PACKOPT, PACKEXT): remove,
	assume tar/bzip2/gzip are present on the developer's machine
	(linux-distrib, linux--distrib): remove (unused)
	(distrib): do not depend on linux-distrib

2005-08-29  Sam Steingold  <sds@gnu.org>

	* makemake.in (PWDCMD): removed
	(distrib) [cygwin]: fixed tar.bz2 location

2005-08-29  Sam Steingold  <sds@gnu.org>

	* version.sh: clisp 2.35 release

2005-08-29  Sam Steingold  <sds@gnu.org>

	* m4/floatparam.m4: require gt_TYPE_LONGDOUBLE instead of CL_LONGDOUBLE
	use $gt_cv_c_long_double instead of $cl_cv_c_longdouble
	* m4/intparam.m4: require gl_AC_TYPE_LONG_LONG and gt_TYPE_LONGDOUBLE
	instead of CL_LONGLONG and CL_LONGDOUBLE
	use $ac_cv_type_long_long and $gt_cv_c_long_double
	instead of $cl_cv_c_longlong and $cl_cv_c_longdouble

2005-08-27  Bruno Haible  <bruno@clisp.org>

	Make the long-float overflow check work on 64-bit platforms.